--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<div id="heart"></div>
 				<div id="words">
 					<div id="step1" class="step active">
-						<h2>Presiona para entrar</h2>
+						<h2>Presiona aqui</h2>
 						<!-- Eliminamos el input del nombre -->
 						<button id="nameSubmit">Enviar</button>
 					</div>
