--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<div id="step1" class="step active">
 						<h2>Presiona aqui</h2>
 						<!-- Eliminamos el input del nombre -->
-						<button id="nameSubmit">Enviar</button>
+						<button id="nameSubmit">Ingresar</button>
 					</div>
 				</div>
 			</div>
